tests/errors/reserved-name.futil
import "primitives/core.futil";
component main() -> () {
  cells {
    reg = std_reg(32);
  }
  wires {
  }
  control {
  }
}
