tests/errors/reserved-name.expect
---CODE---
1
---STDERR---
Error: tests/errors/reserved-name.futil
4 |    reg = std_reg(32);
  |    ^^^^^^^^^^^^^^^^^ Use of reserved keyword: reg
